made app mobile friendly

--- a/src/components/TipButton/tipButton.module.css
+++ b/src/components/TipButton/tipButton.module.css
@@ -25,3 +25,9 @@
 .activeTipButton {
     background-color: #26c2ae;
 }
+
+@media screen and (max-width: 919px) {
+    .tipButton {
+        width: 48%;
+    }
+}
